Kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shoppingkart
  labels:
    app: shoppingkart
spec:
  containers:
  - name: nginx
    image: svixky/shopping:latest
    ports:
    - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingkart-service
spec:
  type: NodePort
  selector:
    app: shoppingkart
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080  # 👈 Will expose at http://<minikube-ip>:30080
