Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-service
spec:
  type: NodePort
  selector:
    app: shoppingkart
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007

---
apiVersion: v1
kind: Service
metadata:
  name: mern-service
spec:
  type: NodePort
  selector:
    app: mern
  ports:
    - port: 80
      targetPort: 5173
      nodePort: 30010
