Kubernetes/tls-shopping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  #it redirect all http request to https
spec:
  tls:
  - hosts:
    - shopping.com
    secretName: shopping-tls
  rules:
  - host: shopping.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopping-service
            port:
              number: 80
