Kubernetes/wildcard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-shopping-ingress
spec:
  rules:
  - host: "*.shopping.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shopping-service
            port:
              number: 80
